--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/log-api?createDatabaseIfNotExist=TRUE&serverTimeZone=UTC
-spring.datasource.username=root
-spring.datasource.password=admin
+spring.datasource.username= username
+spring.datasource.password= password
 spring.jpa.show-sql=true
